# feriados-argentina

./: Feriados.ipynb  Makefile  README.md  feriados_2024.json  feriados_2025.json  main.ipynb  pyproject.toml  response.txt  shell.nix
.github/workflows/: main.yml  update-holidays.yml
