[tool.poetry]
name = "feriados-argentina"
version = "0.1.0"
description = ""
authors = ["Borja Garibotti <mgaribotti@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
